# chatty

./: .gitignore  README.md  pyproject.toml
chatty/: chatui.css  config.py  main.py  models.py
chatty/llm/: __init__.py  base.py  ctransformers.py  openai.py
chatui/: db.py  main.py
